test/corpus/stevens.txt
================================================================================
example 1
================================================================================
.PS
d = 0.2
pi = atan2(0, -1)
A: circle rad 0.5
arrow up d from A.n
arrow up d right d from A.ne
arrow right d from A.e
arrow down d right d from A.se
arrow down d from A.s
arrow down d left d from A.sw
arrow left d from A.w
arrow up d left d from A.nw
" check the compass points on a circle" at A.e + (0.3, 0) ljust
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (assignment
      (variable)
      (expr
        (number))))
  (element
    (assignment
      (variable)
      (expr
        (function_call
          (name)
          (parameter_list
            (parameter
              (expr
                (number)))
            (parameter
              (expr
                (expr
                  (number)))))))))
  (element
    (label)
    (element
      (primitive)
      (attribute_list
        (attribute
          (expr
            (number))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (variable)))
      (attribute
        (position
          (place
            (label)
            (corner))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (variable)))
      (attribute
        (expr
          (variable)))
      (attribute
        (position
          (place
            (label)
            (corner))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (variable)))
      (attribute
        (position
          (place
            (label)
            (corner))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (variable)))
      (attribute
        (expr
          (variable)))
      (attribute
        (position
          (place
            (label)
            (corner))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (variable)))
      (attribute
        (position
          (place
            (label)
            (corner))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (variable)))
      (attribute
        (expr
          (variable)))
      (attribute
        (position
          (place
            (label)
            (corner))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (variable)))
      (attribute
        (position
          (place
            (label)
            (corner))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (variable)))
      (attribute
        (expr
          (variable)))
      (attribute
        (position
          (place
            (label)
            (corner))))))
  (element
    (primitive
      (text))
    (attribute_list
      (attribute
        (position
          (position_not_place
            (position
              (place
                (label)
                (corner)))
            (expr_pair
              (expr_pair
                (expr
                  (number))
                (expr
                  (number)))))))
      (attribute)))
  (element
    (command_line)))
================================================================================
example 2
================================================================================
.PS
A: ellipse wid 0.5 ht 0.3
   arrow up 0.2 from A.n
   arrow up 0.2 right 0.2 from A.ne
   arrow right 0.2 from A.e
   arrow down 0.2 right 0.2 from A.se
   arrow down 0.2 from A.s
   arrow down 0.2 left 0.2 from A.sw
   arrow left 0.2 from A.w
   arrow up 0.2 left 0.2 from A.nw
   " check the compass points on a ellipse" at A.e + (0.3, 0) ljust
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (label)
    (element
      (primitive)
      (attribute_list
        (attribute
          (expr
            (number)))
        (attribute
          (expr
            (number))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (position
          (place
            (label)
            (corner))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))
      (attribute
        (position
          (place
            (label)
            (corner))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (position
          (place
            (label)
            (corner))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))
      (attribute
        (position
          (place
            (label)
            (corner))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (position
          (place
            (label)
            (corner))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))
      (attribute
        (position
          (place
            (label)
            (corner))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (position
          (place
            (label)
            (corner))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))
      (attribute
        (position
          (place
            (label)
            (corner))))))
  (element
    (primitive
      (text))
    (attribute_list
      (attribute
        (position
          (position_not_place
            (position
              (place
                (label)
                (corner)))
            (expr_pair
              (expr_pair
                (expr
                  (number))
                (expr
                  (number)))))))
      (attribute)))
  (element
    (command_line)))
================================================================================
example 3
================================================================================
.PS
B: box at (2.0, 0)
   right_brace( B.ne, B.se )
   " \fCright_brace\fP" at Bracept ljust
   left_brace( B.nw, B.sw )
   box invis wid 0.1 with .c at Bracept \
     "this is from the " rjust \
     "\fCleft_brace\fP " rjust \
     "macro " rjust
   left_space(Bracept, 2.0)
   top_brace( B.nw, B.ne )
   "\fCtop_brace\fP" at Bracept above
   bottom_brace( B.sw, B.se )
   " \fCbottom_brace\fP" at Bracept below
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (label)
    (element
      (primitive)
      (attribute_list
        (attribute
          (position
            (position_not_place
              (expr_pair
                (expr_pair
                  (expr
                    (number))
                  (expr
                    (number))))))))))
  (element
    (macro_call
      (name)
      (parameter_list
        (parameter
          (position
            (place
              (label)
              (corner))))
        (parameter
          (position
            (place
              (label)
              (corner)))))))
  (element
    (primitive
      (text
        (escape_sequence)
        (escape_sequence)))
    (attribute_list
      (attribute
        (position
          (place
            (label))))
      (attribute)))
  (element
    (macro_call
      (name)
      (parameter_list
        (parameter
          (position
            (place
              (label)
              (corner))))
        (parameter
          (position
            (place
              (label)
              (corner)))))))
  (element
    (primitive)
    (attribute_list
      (attribute)
      (attribute
        (expr
          (number)))
      (attribute
        (path
          (relative_path
            (corner))))
      (attribute
        (position
          (place
            (label))))
      (attribute
        (text))
      (attribute)
      (attribute
        (text
          (escape_sequence)
          (escape_sequence)))
      (attribute)
      (attribute
        (text))
      (attribute)))
  (element
    (macro_call
      (name)
      (parameter_list
        (parameter
          (position
            (place
              (label))))
        (parameter
          (expr
            (number))))))
  (element
    (macro_call
      (name)
      (parameter_list
        (parameter
          (position
            (place
              (label)
              (corner))))
        (parameter
          (position
            (place
              (label)
              (corner)))))))
  (element
    (primitive
      (text
        (escape_sequence)
        (escape_sequence)))
    (attribute_list
      (attribute
        (position
          (place
            (label))))
      (attribute)))
  (element
    (macro_call
      (name)
      (parameter_list
        (parameter
          (position
            (place
              (label)
              (corner))))
        (parameter
          (position
            (place
              (label)
              (corner)))))))
  (element
    (primitive
      (text
        (escape_sequence)
        (escape_sequence)))
    (attribute_list
      (attribute
        (position
          (place
            (label))))
      (attribute)))
  (element
    (command_line)))
================================================================================
example 4
================================================================================
.PS
A: box wid 3.0 ht 0.4
   label_above( A.nw, A.ne, 1.2, "a label" )
   label_below( A.sw, A.se, 1.0, "another label" )
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (label)
    (element
      (primitive)
      (attribute_list
        (attribute
          (expr
            (number)))
        (attribute
          (expr
            (number))))))
  (element
    (macro_call
      (name)
      (parameter_list
        (parameter
          (position
            (place
              (label)
              (corner))))
        (parameter
          (position
            (place
              (label)
              (corner))))
        (parameter
          (expr
            (number)))
        (parameter
          (text)))))
  (element
    (macro_call
      (name)
      (parameter_list
        (parameter
          (position
            (place
              (label)
              (corner))))
        (parameter
          (position
            (place
              (label)
              (corner))))
        (parameter
          (expr
            (number)))
        (parameter
          (text)))))
  (element
    (command_line)))
================================================================================
example 5
================================================================================
.PS
A: line right 0.2
B: line right 0.2 with .start at A.start + (0, -0.8)
   line_gap_down( A.c, B.c )
C: line down 0.2 with .start at A.end + (2.0, 0)
D: line down 0.2 with .start at C.start + (1.0, 0)
   line_gap_right( C.c, D.c )
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (label)
    (element
      (primitive)
      (attribute_list
        (attribute
          (expr
            (number))))))
  (element
    (label)
    (element
      (primitive)
      (attribute_list
        (attribute
          (expr
            (number)))
        (attribute
          (path
            (relative_path
              (corner))))
        (attribute
          (position
            (position_not_place
              (position
                (place
                  (label)
                  (corner)))
              (expr_pair
                (expr_pair
                  (expr
                    (number))
                  (expr
                    (expr
                      (number)))))))))))
  (element
    (macro_call
      (name)
      (parameter_list
        (parameter
          (position
            (place
              (label)
              (corner))))
        (parameter
          (position
            (place
              (label)
              (corner)))))))
  (element
    (label)
    (element
      (primitive)
      (attribute_list
        (attribute
          (expr
            (number)))
        (attribute
          (path
            (relative_path
              (corner))))
        (attribute
          (position
            (position_not_place
              (position
                (place
                  (label)
                  (corner)))
              (expr_pair
                (expr_pair
                  (expr
                    (number))
                  (expr
                    (number))))))))))
  (element
    (label)
    (element
      (primitive)
      (attribute_list
        (attribute
          (expr
            (number)))
        (attribute
          (path
            (relative_path
              (corner))))
        (attribute
          (position
            (position_not_place
              (position
                (place
                  (label)
                  (corner)))
              (expr_pair
                (expr_pair
                  (expr
                    (number))
                  (expr
                    (number))))))))))
  (element
    (macro_call
      (name)
      (parameter_list
        (parameter
          (position
            (place
              (label)
              (corner))))
        (parameter
          (position
            (place
              (label)
              (corner)))))))
  (element
    (command_line)))
================================================================================
example 6
================================================================================
.PS
A: box ht 0.2 wid 0.2
B: box ht 0.2 wid 0.2 with .n at A.s + (0, -1.0)
   vv_spline( A.e, B.ne, -0.05, 0.5, -> )
C: box ht 0.2 wid 0.2 with .w at A.e + (2.0, 0)
D: box ht 0.2 wid 0.2 with .n at C.s + (0, -1.0)
   vv_spline( C.e, D.ne, -0.10, 0.3, -> )
#   dash_box( D.sw, C.ne + (0.2, 0) )
   "the last line drawn" at last line.c below
   " the 2nd last line drawn" at 2nd last line.c ljust
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (label)
    (element
      (primitive)
      (attribute_list
        (attribute
          (expr
            (number)))
        (attribute
          (expr
            (number))))))
  (element
    (label)
    (element
      (primitive)
      (attribute_list
        (attribute
          (expr
            (number)))
        (attribute
          (expr
            (number)))
        (attribute
          (path
            (relative_path
              (corner))))
        (attribute
          (position
            (position_not_place
              (position
                (place
                  (label)
                  (corner)))
              (expr_pair
                (expr_pair
                  (expr
                    (number))
                  (expr
                    (expr
                      (number)))))))))))
  (element
    (macro_call
      (name)
      (parameter_list
        (parameter
          (position
            (place
              (label)
              (corner))))
        (parameter
          (position
            (place
              (label)
              (corner))))
        (parameter
          (expr
            (expr
              (number))))
        (parameter
          (expr
            (number)))
        (parameter))))
  (element
    (label)
    (element
      (primitive)
      (attribute_list
        (attribute
          (expr
            (number)))
        (attribute
          (expr
            (number)))
        (attribute
          (path
            (relative_path
              (corner))))
        (attribute
          (position
            (position_not_place
              (position
                (place
                  (label)
                  (corner)))
              (expr_pair
                (expr_pair
                  (expr
                    (number))
                  (expr
                    (number))))))))))
  (element
    (label)
    (element
      (primitive)
      (attribute_list
        (attribute
          (expr
            (number)))
        (attribute
          (expr
            (number)))
        (attribute
          (path
            (relative_path
              (corner))))
        (attribute
          (position
            (position_not_place
              (position
                (place
                  (label)
                  (corner)))
              (expr_pair
                (expr_pair
                  (expr
                    (number))
                  (expr
                    (expr
                      (number)))))))))))
  (element
    (macro_call
      (name)
      (parameter_list
        (parameter
          (position
            (place
              (label)
              (corner))))
        (parameter
          (position
            (place
              (label)
              (corner))))
        (parameter
          (expr
            (expr
              (number))))
        (parameter
          (expr
            (number)))
        (parameter))))
  (comment)
  (element
    (primitive
      (text))
    (attribute_list
      (attribute
        (position
          (place
            (nth_primitive
              (object_type))
            (corner))))
      (attribute)))
  (element
    (primitive
      (text))
    (attribute_list
      (attribute
        (position
          (place
            (nth_primitive
              (ordinal)
              (object_type))
            (corner))))
      (attribute)))
  (element
    (command_line)))
================================================================================
example 7
================================================================================
.PS
    down
A1: box ht 0.2 wid 0.2
A2: box ht 0.2 wid 0.2
B:  box ht 0.2 wid 0.2 with .sw at A1.ne + (1.0, 0.5)
C:  box ht 0.2 wid 0.2 with .nw at A1.se + (3.0, -0.5)
    hz_spline( A1.e, B.w, 0.05, 0, ->, 0.5, -0.2 )
    hz_spline( A2.e, C.w, 0, 0.10, <-, 0.5, -0.2 )
    " overrun = \(mi0.2" at B.e ljust
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (direction))
  (element
    (label)
    (element
      (primitive)
      (attribute_list
        (attribute
          (expr
            (number)))
        (attribute
          (expr
            (number))))))
  (element
    (label)
    (element
      (primitive)
      (attribute_list
        (attribute
          (expr
            (number)))
        (attribute
          (expr
            (number))))))
  (element
    (label)
    (element
      (primitive)
      (attribute_list
        (attribute
          (expr
            (number)))
        (attribute
          (expr
            (number)))
        (attribute
          (path
            (relative_path
              (corner))))
        (attribute
          (position
            (position_not_place
              (position
                (place
                  (label)
                  (corner)))
              (expr_pair
                (expr_pair
                  (expr
                    (number))
                  (expr
                    (number))))))))))
  (element
    (label)
    (element
      (primitive)
      (attribute_list
        (attribute
          (expr
            (number)))
        (attribute
          (expr
            (number)))
        (attribute
          (path
            (relative_path
              (corner))))
        (attribute
          (position
            (position_not_place
              (position
                (place
                  (label)
                  (corner)))
              (expr_pair
                (expr_pair
                  (expr
                    (number))
                  (expr
                    (expr
                      (number)))))))))))
  (element
    (macro_call
      (name)
      (parameter_list
        (parameter
          (position
            (place
              (label)
              (corner))))
        (parameter
          (position
            (place
              (label)
              (corner))))
        (parameter
          (expr
            (number)))
        (parameter
          (expr
            (number)))
        (parameter)
        (parameter
          (expr
            (number)))
        (parameter
          (expr
            (expr
              (number)))))))
  (element
    (macro_call
      (name)
      (parameter_list
        (parameter
          (position
            (place
              (label)
              (corner))))
        (parameter
          (position
            (place
              (label)
              (corner))))
        (parameter
          (expr
            (number)))
        (parameter
          (expr
            (number)))
        (parameter)
        (parameter
          (expr
            (number)))
        (parameter
          (expr
            (expr
              (number)))))))
  (element
    (primitive
      (text
        (escape_sequence)))
      (attribute_list
        (attribute
          (position
            (place
              (label)
              (corner))))
        (attribute)))
  (element
    (command_line)))
================================================================================
example 8
================================================================================
.PS
   down
A: box ht 0.2 wid 1.0 "A"
B: box ht 0.2 wid 1.0 "B"
C: box ht 0.2 wid 1.0 "C"
D: box ht 0.2 wid 1.0 "D"
E: box ht 0.2 wid 1.0 "E"
F: box ht 0.2 wid 1.0 "F"
G: box ht 0.2 wid 1.0 "G"
H: box ht 0.2 wid 1.0 "H"
   spline_dl( A.w, H.w, 0.1, 0.5, -> )
   spline_dl( B.w, G.w, 0.1, 0.4, -> )
   spline_dl( C.w, F.w, 0.1, 0.3, -> )
   spline_ur( H.e, A.e, -0.1, 0.4, -> )
   spline_ur( G.e, B.e, -0.1, 0.3, -> )
   spline_ur( F.e, C.e, -0.1, 0.2, -> )
.PE
